Progress made on DeepL Translation, along with implementation of config.json and ConfigDataRetriever.
Still requires implementation of Page.java to function.